--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -4,9 +4,12 @@
 
 @import "base/animation";
 @import "base/base";
-@import "base/typoghraphy";
+@import "base/typography";
 @import "base/utilities";
 
 @import "components/btn";
+
+@import "layout/grid";
+@import "layout/header";
 
 @import "pages/home";
