--- a/Natours/starter/sass/abstract/_variables.scss
+++ b/Natours/starter/sass/abstract/_variables.scss
@@ -3,11 +3,16 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-gey-light-1: #f7f7f7;
+
 $color-gey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
-// Grid
+//font
+$default-font-size: 1.6rem;
+
+// grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
